style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Raleway:wght@400;700&display=swap');
*, *::before, *::after {
  box-sizing: border-box;
}

html {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
  --red: #cb5144;
  --green: #bbc04c;
  --clr-dark: #333;
  --light-grey: #f2f2f2;
  --card-color: #F9A826;
  --blue-highlight: #1b2c4a;
  --yellow-highlight: #F9A826;
  --white-background: #fcfcfc;
  --social-background-color: #1b2c4a;
  --font-family-text: 'Raleway', sans-serif;
  --font-family-heading: 'Playfair Display', serif;
  --blue-highlight_transparent: rgba(27, 44, 58, 0.45);
  background-color: var(--white-background);
}

.red-card {
  --card-color: #cb5144;
}

.green-card {
  --card-color: #bbc04c;
}

p, td {
  font-family: var(--font-family-text);
  font-size: 16px;
}

body {
  overflow-x: hidden;
  padding-top: 120px;
  background-color: aqua !important;
}

.mainHeading {
  margin-top: 6.4rem;
  font-size: 5rem;
  font-family: var(--font-family-heading);
}

.cardHeading {
  font-family: var(--font-family-heading);
}

.subHeading {
  line-height: 1.6;
  font-size: 1.8rem;
  /* margin-top: 1.6rem; */
  /* padding: 16px; */
  padding-top: 0px;
  /* border: 1px solid black; */
  font-family: var(--font-family-text);
}

/* 
section {
  margin-top: 2rem;
} */

.error {
  background-color: var(--red);
  padding: 4px;
  color: var(--white-background);
  font-size: 12px;
  font-weight: bold;
}

.success {
  background-color: var(--green);
  padding: 8px;
  color: var(--white-background);
  font-size: 14px;
  font-weight: bold;
}

.section-heading {
  text-align: center;
  font-family: var(--font-family-heading);
}

.image-offset {
  margin-top: 25vh;
}

.specialization {
  padding: 2rem;
  background-color: var(--white-background);
}

/* .bottom-border {
  padding: 1rem;
  margin: .5rem;
  border-bottom: 1px solid var(--blue-highlight);
} */

.remove {
  border: 1px solid var(--blue-highlight);
  padding: 5px;
  outline: none;
  width: 100%;
}

.remove:invalid {
  border: 1px solid var(--blue-highlight);
  outline: none;
  box-shadow: none;
}

.remove:focus {
  border: 1px solid var(--blue-highlight);
  border-left: 5px solid var(--blue-highlight);
  outline: none;
  box-shadow: none;
}

.remove:activeLink {
  border: 1px solid var(--blue-highlight);
  outline: none;
  box-shadow: none;
}

a {
  text-decoration: none !important;
  font-family: var(--font-family-text);
}

button {
  outline: none;
  border: none;
  font-family: var(--font-family-heading);
}

a:hover {
  text-decoration: none !important;
}

.btn-action {
  display: inline-block;
  padding: 10px;
  margin-top: 30px;
  font-weight: 900;
  color: var(--white-background);
  background-color: var(--blue-highlight);
  box-shadow: 5px 5px 0px 0px var(--card-color);
}

.btn-action-outline-rounded {
  padding: 10px;
  margin-top: 10px;
  border-radius: 50%;
  color: var(--blue-highlight);
  border: 2px solid var(--blue-highlight);
  background-color: var(--white-background);
}

.btn-action:hover {
  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, .2), 10px 10px 0 0px var(--card-color), 15px 15px 10px 0px rgba(0, 0, 0, .2);
  color: var(--white-background);
}

.btn-submit {
  float: right;
}

.cardIcons {
  padding: 1rem;
  font-size: 5rem;
}

.specialization {
  min-height: 60vh;
  background-color: #1b2c4a;
}

.specialization-card {
  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, .2), 20px 20px 0 0px var(--card-color), 25px 25px 10px 0px rgba(0, 0, 0, .2);
  background-color: var(--white-background);
}

.specialization-card p{
  padding: 25px;
 
}
.specialization-card h1, .specialization-card h2 {
  background-color: var(--card-color);
  color: var(--white-background);
  margin-left: -30px !important;
  padding: 10px;
}

.specialization-card h3{
  background-color: var(--card-color);
  color: var(--white-background);
  margin-left: -30px !important;
  padding: 30px;
  line-height: 1.2;
}

.courses{
  font-size: 24px;
}
.map-card {
  height: 25vh;
  padding: 0px !important;
  background-color: var(--white-background);
}

.map-card p {
  font-weight: bolder;
  padding: 15px;
  background-color: #1b2c4a;
  
}
.learn-more {
  padding: 10px;
  font-weight: bold;
  display: inline-block;
  color: var(--white-background);
  background-color: var(--card-color);
}

.learn-more:hover {
  color: var(--white-background) !important;
}

.footer {
  padding: 0 !important;
  margin: 0px !important;
  background-color: #3c3d41;
}

.copyright{
  color: var(--white-background);
  font-family: var(--font-family-text);
  font-size: 1.4rem;
  padding: 1.2rem;
}
.social-icon div {
  display: inline-block;
  float: right;
  font-size: 2rem;
  background-color: var(--social-background-color);
  color: var(--white-background);
  padding: 1.2rem;
  margin: 1.2rem;
}
.social-icon a{
  color: var(--white-background)
}
.fb{
  --social-background-color: var(--blue-highlight);
}

.insta{
  --social-background-color: var(--red);
}

.linkedin{
  --social-background-color: var(--yellow-highlight);
}

/* navigation*/

.navigation-bar {
  background-color:#ffffff;
}
.contact-text{
  color: var(--clr-dark);
  
}
.navigation-bar li a {
  margin-top: 18px;
  color: var(--clr-dark)
}

.navigation-bar li a:hover {
  background-color: var(--white-background) !important;
}

.navigation-bar ul {
  padding: 0 8% 0 8%;  
}

.navigation-bar ul li {
  margin-top: 18px;
  color: var(--clr-dark)
}

.activeLink {
  border-bottom: 3px solid var(--red);
}

.home a {
  margin-left: 0px;
}

.logo {
  margin-top: 18px;
}

/* navigation end */

/* contact us form */

.contact-container {
  padding: 1.6rem;
  background-color: var(--light-grey);
}

.contact-card {
  margin: 1.6rem;
  background-color: var(--white-background);
}

.fab{
  position: fixed;
  bottom: 10vh;
  right: 10vw;
  display: inline-block;
  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, .2)
}

.fab a{
  padding: 15px;
  font-size:1.5rem; 
  background-color: var(--red);
  color: var(--white-background);
}

.fab-hide{
  display: none;
}

/* end of contact us */
@media screen and (min-width: 1400px) {
  /* STYLES HERE */
  .container{
    width: 80% !important;
  }
}

.footer-bs {
  background-color: #3c3d41;
padding: 60px 40px;
color: rgba(255,255,255,1.00);
margin-bottom: 20px;
border-bottom-right-radius: 6px;
border-top-left-radius: 0px;
border-bottom-left-radius: 6px;
}
.footer-bs .footer-brand, .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { padding:10px 25px; }
.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-color: transparent; }
.footer-bs .footer-brand h2 { margin:0px 0px 10px; }
.footer-bs .footer-brand p { font-size:12px; color:rgba(255,255,255,0.70); }

.footer-bs .footer-nav ul.pages { list-style:none; padding:0px; }
.footer-bs .footer-nav ul.pages li { padding:5px 0px;}
.footer-bs .footer-nav ul.pages a { color:rgba(255,255,255,1.00); font-weight:bold; text-transform:uppercase; }
.footer-bs .footer-nav ul.pages a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
.footer-bs .footer-nav h4 {
font-size: 11px;
text-transform: uppercase;
letter-spacing: 3px;
margin-bottom:10px;
}

.footer-bs .footer-nav ul.list { list-style:none; padding:0px; }
.footer-bs .footer-nav ul.list li { padding:5px 0px;}
.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); }
.footer-bs .footer-nav ul.list a:hover { color:rgba(255,255,255,0.60); text-decoration:none; }

.footer-bs .footer-social ul { list-style:none; padding:0px; }
.footer-bs .footer-social h4 {
font-size: 11px;
text-transform: uppercase;
letter-spacing: 3px;
}
.footer-bs .footer-social li { padding:5px 4px;}
.footer-bs .footer-social a { color:rgba(255,255,255,1.00);}
.footer-bs .footer-social a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }

.footer-bs .footer-ns h4 {
font-size: 11px;
text-transform: uppercase;
letter-spacing: 3px;
margin-bottom:10px;
}
.footer-bs .footer-ns p { font-size:12px; color:rgba(255,255,255,0.70); }

@media (min-width: 768px) {
.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
}


/* Slideshow styles */
.mySlides {display: none;}
img {
  vertical-align: middle;
  /* border-radius: 30%; */
  border: 4px solid transparent;
  border-radius: 16px;
  background: linear-gradient(orange, violet);
}

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin-top: 5%;
}

/* Caption text */
.text {
  color: #000;
  font-size: 25px;
  font-weight: 900;
  padding: 8px 12px;
  position: absolute;
  bottom: 100%;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  height: 5px;
  width: 30px;
  margin: 0 2px;
  background-color: #ffffff;
  border-radius: 10%;
  display: inline-block;
  transition: background-color 0.6s ease;
  align-self: center;
}

.active {
  background-color: #717171;
}

/* Fading animation */
.ifade {
  animation-name: ifade;
  animation-duration: 0.5s;
}

.ifade img {
  height: 280px;
}

/* @keyframes ifade {
  from {opacity: .1} 
  to {opacity: 1}
} */

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .text {font-size: 11px}
}

